--- a/package.json
+++ b/package.json
@@ -23,9 +23,13 @@
     "@tiptap/pm": "^3.3.0",
     "@tiptap/react": "^3.3.0",
     "@tiptap/starter-kit": "^3.3.0",
+    "@types/express": "^5.0.3",
+    "body-parser": "^2.2.0",
     "bpmn-js": "^18.6.3",
     "chart.js": "^4.5.0",
+    "dotenv": "^17.2.1",
     "emoji-picker-react": "^4.13.2",
+    "express": "^5.1.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.2",
     "lucide-react": "^0.344.0",
