feat: implement device lock security system
- Add FingerprintJS integration for device identification
- Implement device lock service with database integration
- Add device lock columns to user_profiles table
- Create DeviceLockAlert component for user notifications
- Add AdminDeviceUnlock component for account management
- Update AuthContext to check device lock on login and session load
- Add admin bypass functionality for device lock
- Implement proper error handling and user messaging
- Add comprehensive logging for debugging

Security features:
- Prevents unauthorized access from different devices
- Automatic account locking on device mismatch
- Admin bypass for authorized personnel
- User-friendly error messages with support contact info

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@elevenlabs/elevenlabs-js": "^2.7.0",
+    "@fingerprintjs/fingerprintjs": "^4.6.2",
     "@supabase/supabase-js": "^2.50.4",
     "@tiptap/extension-emoji": "^3.3.0",
     "@tiptap/extension-mention": "^3.3.0",
