--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "bpmn-js": "^18.6.3",
     "chart.js": "^4.5.0",
     "dotenv": "^17.2.1",
+    "emoji-mart": "^5.6.0",
     "emoji-picker-react": "^4.13.2",
     "express": "^5.1.0",
     "html2canvas": "^1.4.1",
