--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "lucide-react": "^0.344.0",
     "openai": "^5.16.0",
     "react": "^18.3.1",
+    "react-calendly": "^4.4.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-markdown": "^10.1.0",
