FEATURE: Add comprehensive local testing suite
✅ TESTING TOOLS INSTALLED:
- @playwright/test for UI and performance testing
- lighthouse for performance auditing
- autocannon for load testing

✅ TEST SUITE CREATED:
- tests/performance.spec.ts: Playwright tests for page load, TTI, and UI verification
- tests/run-local-tests.sh: Master script to run all tests with one command
- playwright.config.ts: Playwright configuration
- tests/README.md: Complete documentation and usage guide

✅ FEATURES:
- Page load time measurement (target: < 3s)
- Time to interactive measurement (target: < 4s)
- Lighthouse performance audit (target: > 90)
- Load testing with 10 concurrent connections
- Automated build, serve, test, and cleanup
- Cross-platform shell script with color output
- Detailed HTML reports and JSON data

✅ USAGE:
Run all tests locally:
  bash tests/run-local-tests.sh

Run individual tests:
  npx playwright test
  npx lighthouse http://localhost:4173 --view
  npx autocannon -d 10 http://localhost:4173

✅ OUTPUT:
- Lighthouse report: tests/lighthouse-report.html
- Load test results: tests/autocannon-results.txt
- Terminal summary with all key metrics

✅ BENEFITS:
- No deployment needed - 100% local testing
- Complete performance insights
- Catch regressions before pushing
- Professional test infrastructure

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,10 @@ dist-ssr
 # Core dumps
 core
 core.*
+
+# Test outputs
+tests/lighthouse-report.html
+tests/lighthouse-report.json
+tests/autocannon-results.txt
+test-results/
+playwright-report/
