--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-calendly": "^4.4.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
+    "react-joyride": "^2.9.3",
     "react-markdown": "^10.1.0",
     "react-pageflip": "^2.0.3",
     "resend": "^6.1.2",
