--- a/server/package.json
+++ b/server/package.json
@@ -12,10 +12,13 @@
     "fastify": "^4.24.3",
     "@fastify/cors": "^8.4.0",
     "@fastify/static": "^6.12.0",
+    "@fastify/helmet": "^11.1.1",
+    "@fastify/rate-limit": "^9.1.0",
     "openai": "^4.20.1",
     "pg": "^8.11.3",
     "pgvector": "^0.2.0",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
