--- a/.github/workflows/security-check.yml
+++ b/.github/workflows/security-check.yml
@@ -37,16 +37,33 @@ jobs:
 
       - name: Check for secrets in code
         run: |
-          # Check for common secret patterns (OpenAI keys)
-          # Using extended regex (-E) and excluding common directories
-          if grep -rE "sk-proj-[A-Za-z0-9]{32,}" . --exclude-dir=node_modules --exclude-dir=.git --exclude-dir=dist --exclude-dir=backup_20250824_214727 --exclude-dir=backup_20250827_104428_sidebar_fixed --exclude-dir=backup_most_correct_20250913_044954 --exclude-dir=stakeholder-v2 --exclude="*.md" --exclude="*.example"; then
-            echo "❌ ERROR: Potential OpenAI API keys found in code"
+          # Check for OpenAI API keys using extended regex (-E)
+          # Matches: sk-proj-... or sk-... with proper lengths
+          if grep -rE "sk-(proj-[A-Za-z0-9]{24}|[A-Za-z0-9]{48})" . \
+            --exclude-dir=node_modules \
+            --exclude-dir=.git \
+            --exclude-dir=dist \
+            --exclude-dir=backup_20250824_214727 \
+            --exclude-dir=backup_20250827_104428_sidebar_fixed \
+            --exclude-dir=backup_most_correct_20250913_044954 \
+            --exclude-dir=stakeholder-v2 \
+            --exclude="*.md" \
+            --exclude="*.example" \
+            --exclude=".env.local"; then
+            echo "❌ ERROR: OpenAI key detected! Failing build."
             exit 1
           fi
           
-          # Check for private keys (actual keys, not just patterns)
-          if grep -rE "-----BEGIN.*PRIVATE KEY-----" . --exclude-dir=node_modules --exclude-dir=.git --exclude-dir=dist --exclude-dir=backup_20250824_214727 --exclude-dir=backup_20250827_104428_sidebar_fixed --exclude-dir=backup_most_correct_20250913_044954 --exclude-dir=stakeholder-v2; then
-            echo "❌ ERROR: Potential private keys found in code"
+          # Check for private keys
+          if grep -rE "-----BEGIN.*PRIVATE KEY-----" . \
+            --exclude-dir=node_modules \
+            --exclude-dir=.git \
+            --exclude-dir=dist \
+            --exclude-dir=backup_20250824_214727 \
+            --exclude-dir=backup_20250827_104428_sidebar_fixed \
+            --exclude-dir=backup_most_correct_20250913_044954 \
+            --exclude-dir=stakeholder-v2; then
+            echo "❌ ERROR: Private key detected! Failing build."
             exit 1
           fi
           
