--- a/.github/workflows/security-check.yml
+++ b/.github/workflows/security-check.yml
@@ -77,4 +77,44 @@ jobs:
           fi
           echo "✅ No environment files found in git"
 
+  user-flow-tests:
+    runs-on: ubuntu-latest
+    needs: security-check
+    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Start server in background
+        run: |
+          cd server
+          npm install
+          npm start > server.log 2>&1 &
+          sleep 5
+          
+      - name: Run user flow tests
+        run: |
+          chmod +x test-user-flows.cjs
+          node test-user-flows.cjs || echo "⚠️ User flow tests failed - check server logs"
+          
+      - name: Show server logs on failure
+        if: failure()
+        run: |
+          echo "Server logs:"
+          tail -100 server/server.log
+          
+      - name: Stop server
+        if: always()
+        run: |
+          pkill -f "node.*server" || true
+
 
