--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "test:ui": "vitest --ui",
     "test:run": "vitest run",
     "test:coverage": "vitest run --coverage",
-    "test:watch": "vitest --watch"
+    "test:watch": "vitest --watch",
+    "test:flows": "node test-user-flows.cjs"
   },
   "dependencies": {
     "@elevenlabs/elevenlabs-js": "^2.7.0",
