--- a/server/package.json
+++ b/server/package.json
@@ -9,21 +9,27 @@
     "seed": "node src/scripts/seed.js"
   },
   "dependencies": {
-    "fastify": "^4.24.3",
     "@fastify/cors": "^8.4.0",
-    "@fastify/static": "^6.12.0",
     "@fastify/helmet": "^11.1.1",
+    "@fastify/multipart": "^9.3.0",
     "@fastify/rate-limit": "^9.1.0",
+    "@fastify/static": "^6.12.0",
+    "@supabase/supabase-js": "^2.78.0",
+    "dotenv": "^16.3.1",
+    "fastify": "^4.24.3",
     "openai": "^4.20.1",
     "pg": "^8.11.3",
     "pgvector": "^0.2.0",
-    "dotenv": "^16.3.1",
     "zod": "^3.25.76"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
   },
-  "keywords": ["business-analysis", "training", "ai"],
+  "keywords": [
+    "business-analysis",
+    "training",
+    "ai"
+  ],
   "author": "BA Training Team",
   "license": "MIT"
 }
