--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "emoji-mart": "^5.6.0",
     "emoji-picker-react": "^4.13.2",
     "express": "^5.1.0",
+    "framer-motion": "^12.23.24",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.2",
     "lucide-react": "^0.344.0",
