--- a/package.json
+++ b/package.json
@@ -71,3 +71,10 @@
     "eslint-plugin-react-refresh": "^0.4.11",
     "globals": "^15.9.0",
     "jsdom": "^24.0.0",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.3.3",
+    "vite": "^5.2.0",
+    "vitest": "^1.3.1"
+  }
+}
