--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "test:run": "vitest run",
     "test:coverage": "vitest run --coverage",
     "test:watch": "vitest --watch",
-    "test:flows": "node test-user-flows.cjs"
+    "test:flows": "node test-user-flows.cjs",
+    "backfill:stable": "tsx scripts/backfillStableKeys.ts"
   },
   "dependencies": {
     "@elevenlabs/elevenlabs-js": "^2.7.0",
@@ -73,6 +74,7 @@
     "jsdom": "^24.0.0",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.4.1",
+    "tsx": "^4.7.0",
     "typescript": "^5.3.3",
     "vite": "^5.2.0",
     "vitest": "^1.3.1"
